Fix color contrast issues affecting homepage

--- a/packages/lit-dev-content/site/css/code.css
+++ b/packages/lit-dev-content/site/css/code.css
@@ -8,13 +8,13 @@ html {
   --playground-code-gutter-border-right: none;
 
   --playground-highlight-color: var(--color-blue);
-  --playground-code-keyword-color: #d73a49;
+  --playground-code-keyword-color: #d92f3f;
   --playground-code-atom-color: #005cc5;
   --playground-code-number-color: #005cc5;
   --playground-code-def-color: #6f42c1;
   --playground-code-variable-color: #6f42c1;
-  --playground-code-property-color: #e36209;
-  --playground-code-operator-color: #d73a49;
+  --playground-code-property-color: #008176;
+  --playground-code-operator-color: #d92f3f;
   --playground-code-variable-2-color: #000000;
   --playground-code-variable-3-color: #000000;
   --playground-code-type-color: #005cc5;
